다시다시다시다시

--- a/kakao_map.html
+++ b/kakao_map.html
@@ -10,8 +10,19 @@
     <script src="kakao_map.js"></script>
 </head>
 <body>
-    <div id="map" style="width:600px; height:600px;">
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ae7712c099cd7e5303674fbacf326541"></script>
-    </div>
+<!-- 지도를 표시할 div 입니다 -->
+<div id="map" style="width:100%;height:350px;"></div>
+
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY를 사용하세요"></script>
+<script>
+var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+    mapOption = { 
+        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+        level: 3 // 지도의 확대 레벨
+    };
+
+// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+var map = new kakao.maps.Map(mapContainer, mapOption); 
+</script>
 </body>
 </html>
